5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1745_1540.log
== TEST (2019-05-15 14:48:42) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=3
d=1
c=0
soma=0
while(c<=k):
	cos=(x**i)/factorial(2*d+1)
	c=c+1
	d=d+2
	i=i+2
print(round(cos,9))
	
	
	



-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:49:25) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=3
d=1
c=0
soma=0
while(c<=k):
	cos=x + (x**i)/factorial(2*d+1)
	c=c+1
	d=d+2
	i=i+2
print(round(cos,9))
	
	
	



-- OUTPUT:
1.23370055
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:49:40) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=3
d=1
c=0
soma=0
while(c<=k):
	cos=x + (x**i)/factorial(2*d+1)
	c=c+1
	d=d+2
	i=i+2
print(round(cos,9))
	
	
	



-- EXECUTION TIME:
0.366989
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
1.23370055
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
6.493955109
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
1.570796327
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:11:21) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos=x + (x**i)/factorial(2*d)
	w=(((-1)**(i+1)))
	g= cos*w
	c=c+1
	d=d+2
	i=i+2
print(round(cos,9))
	
	
	



-- OUTPUT:
1.23370055
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:13:13) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d)
	w=(((-1)**(i+1)))
	g= cos*w
	c=c+1
	d=d+2
	i=i+2
print(round(cos,9))
	
	
	



-- ERROR:
File "XXXX", line 10
    w=(((-1)**(i+1)))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:13:32) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d)
	w =(((-1)**(i+1)))
	g= cos*w
	c=c+1
	d=d+2
	i=i+2
print(round(cos,9))
	
	
	



-- ERROR:
File "XXXX", line 10
    w =(((-1)**(i+1)))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:13:44) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d)
	w =(((-1)**(i+1)))
	g= cos*w
	c=c+1
	d=d+2
	i=i+2
print(round(cos,9))
	
	
	



-- ERROR:
File "XXXX", line 10
    w =(((-1)**(i+1)))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:07) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d)
	w =(((-1)**(i+1)))
	g= cos*w
	c=c+1
	d=d+1
	i=i+2
print(round(cos,9))
	
	
	



-- ERROR:
File "XXXX", line 10
    w =(((-1)**(i+1)))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:23) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d)
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+2
print(round(cos,9))
	
	
	



-- ERROR:
File "XXXX", line 10
    b =(((-1)**(i+1)))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:41) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d)
	b =((-1)**(i+1))
	g= cos*b
	c=c+1
	d=d+1
	i=i+2
print(round(cos,9))
	
	
	



-- ERROR:
File "XXXX", line 10
    b =((-1)**(i+1))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:50) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d)
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+2
print(round(cos,9))
	
	
	



-- ERROR:
File "XXXX", line 10
    b =(((-1)**(i+1)))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:22:48) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+2
print(round(cos,9))
	
	
	



-- OUTPUT:
1.000133094
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:23:12) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+2
print(round(cos,9))
	
	
	



-- EXECUTION TIME:
0.357861
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
1.000133094
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
79.441398934
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
1.000000006
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:23:19) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+1
print(round(cos,9))
	
	
	



-- OUTPUT:
1.000070881
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:33) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+1
print(round(cos,9))
	
	
	



-- OUTPUT:
1.000070881
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:24:59) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+1
print(round(cos,9))
	
	
	



-- EXECUTION TIME:
0.387925
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
1.000070881
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
1.286431406
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:55) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos(x**0.5)= 1 + (x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+1
print(round(cos,6))
	
	
	



-- ERROR:
File "XXXX", line 9
    cos(x**0.5)= 1 + (x**(i+1)/factorial(2*d))
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:26:14) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos(sqrt x)= 1 + (x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+1
print(round(cos,6))
	
	
	



-- ERROR:
File "XXXX", line 9
    cos(sqrt x)= 1 + (x**(i+1)/factorial(2*d))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:26:21) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos(sqrt(x))= 1 + (x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+1
print(round(cos,6))
	
	
	



-- ERROR:
File "XXXX", line 9
    cos(sqrt(x))= 1 + (x**(i+1)/factorial(2*d))
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:27:03) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+1
print(round(cos,6))
	
	
	



-- OUTPUT:
1.000071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:27:20) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+1
print(round(cos,6))
	
	
	



-- OUTPUT:
1.000071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:27:37) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+1
print(round(cos,6))
	
	
	



-- OUTPUT:
1.000071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:27:50) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+1
print(round(cos,6))
	
	
	



-- OUTPUT:
1.000071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:28:05) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 + (x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+1
print(round(cos,6))
	
	
	



-- OUTPUT:
1.000071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:29:05) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+1
print(round(cos,6))
	
	
	



-- OUTPUT:
0.999929
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:29:25) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+1
print(round(cos,6))
	
	
	



-- OUTPUT:
0.999929
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:29:36) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cos= 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+1
print(round(cos,6))
	
	
	



-- OUTPUT:
0.999929
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:30:12) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cosx= 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    g= cos*b
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:34:58) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cosx= 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cos*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    g= cos*b
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:35:31) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cosx= 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.999929
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:35:48) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cosx= 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.999929
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:36:00) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cosx= 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.999929
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:36:55) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cosx= 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.999929
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:37:05) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cosx= 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- EXECUTION TIME:
0.167562
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.999929
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
0.713569
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:37:12) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<=k):
	cosx= 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.999929
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:37:19) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<k):
	cosx= 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.996783
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:37:37) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<k):
	cosx= 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.996783
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:37:53) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<k):
	cosx= 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.996783
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:38:06) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
soma=0
while(c<k):
	cosx= 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.996783
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:39:33) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
f=1
soma=0
while(c<k):
	cosx= f -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.996783
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:39:48) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
f=1
soma=0
while(c<k):
	cosx= f -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.996783
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:47:15) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
f=1
soma=0
while(c<k):
	cosx= f -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- EXECUTION TIME:
0.193527
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.996783
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-1.47002
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:47:26) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
f=1
soma=0
while(c<k):
	cosx= f -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.996783
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:47:38) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
f=1
soma=0
while(c<k):
	cosx= f -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.996783
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:48:30) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=1
f=1
soma=0
while(c<k):
	cosx= f -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.921762
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:48:59) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=1
f=1
soma=0
while(c<k):
	cosx = f -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.921762
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:50:59) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=1

soma=0
while(c<k):
	cosx = 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.921762
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:51:45) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=1

soma=0
while(c<k):
	cosx = 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.921762
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:52:19) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0

soma=0
while(c<k):
	cosx = 1 -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.996783
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:53:25) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
f=1
soma=0
while(c<k):
	cosx = f -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- OUTPUT:
0.996783
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:53:39) 
-- CODE:
from math import*
x=eval(input("Angulo: "))
k=int(input("n: "))
i=1
d=1
c=0
f=1
soma=0
while(c<k):
	cosx = f -(x**(i+1)/factorial(2*d))
	b =(((-1)**(i+1)))
	g= cosx*b
	c=c+1
	d=d+1
	i=i+1
print(round(cosx,6))
	
	
	



-- EXECUTION TIME:
0.172753
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.996783
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-1.47002
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
